; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/dc/extr_bcode.c_store_stack.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/dc/extr_bcode.c_store_stack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }
%struct.value = type { i32 }

@bmachine = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @store_stack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @store_stack() #0 {
  %1 = alloca %struct.value*, align 8
  %2 = alloca i32, align 4
  %3 = call i32 (...) @readreg()
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp sge i32 %4, 0
  br i1 %5, label %6, label %18

6:                                                ; preds = %0
  %7 = call %struct.value* (...) @pop()
  store %struct.value* %7, %struct.value** %1, align 8
  %8 = load %struct.value*, %struct.value** %1, align 8
  %9 = icmp eq %struct.value* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %6
  br label %18

11:                                               ; preds = %6
  %12 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bmachine, i32 0, i32 0), align 8
  %13 = load i32, i32* %2, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load %struct.value*, %struct.value** %1, align 8
  %17 = call i32 @stack_push(i32* %15, %struct.value* %16)
  br label %18

18:                                               ; preds = %10, %11, %0
  ret void
}

declare dso_local i32 @readreg(...) #1

declare dso_local %struct.value* @pop(...) #1

declare dso_local i32 @stack_push(i32*, %struct.value*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
